syntax = "proto3";

package yandex.cloud.priv.disk_manager.v1;

import "google/protobuf/empty.proto";
import "yandex/cloud/api/operation.proto";
import "yandex/cloud/priv/operation/operation.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/api/yandex/cloud/priv/disk_manager/v1;disk_manager";

service OperationService {
    rpc Get(GetOperationRequest) returns (operation.Operation);
    rpc Cancel(CancelOperationRequest) returns (operation.Operation);
}

message GetOperationRequest {
    string operation_id = 1;
}

message CancelOperationRequest {
    string operation_id = 1;
}
